resources/css/style.css
* {
  font-family: Helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
}

header {
  display: flex;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid seashell;
  height: 69px;
  position: fixed;
  background-color: black;
  z-index: 10;
  margin-top: 0px;
}

header img {
  height: 50px;
  margin-left: 10px;
}

header nav {
  padding-right: 10px;
}

nav span{
  display: inline-block;
  padding: 20px 10px;
}

.logo {
  display: flex;
  align-items: center;
  flex-grow: 1;
  padding-left: 30px;
}


a {
  color: seashell;
  text-decoration: underline;
}


.main {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 79px;
}

.flex-container {
  display: flex;
  align-content: center;
  flex-wrap: wrap;
  justify-content: center;
}

.content {
  width: 1200px;
  background-color: black;
  height: 150px;
  align-items: center;
  margin: auto;
}

#mision {
  background-image: url("../../resources/images/img-mission-background.jpg");
  height: 700px;
  width: 1200px;
  margin: 64px auto;
}

#store {
  width: 1000px;
  margin: 64px auto;
}

.flex-container.items{
  width: 1000px;

}

.item{
  margin: 15px;
}

.item img {
  height: 200px;
  width: 300px;

}

.item span {
  display: block;
  padding-top: 10px;
}

#locations {
  height: 500px;
  background-image: url("../../resources/images/img-locations-background.jpg");
  width: 1200px;
  margin: 64px auto;
  background-size: cover;
  padding-top: 70px;
}

#locations h2{
  background-color: transparent;
}

.location {
  width: 300px;
  margin: 15px 40px;
  opacity: 1;


}

.flex-container.locations {
  justify-content: space-around;
  background-color: transparent;
}

#contact {
  margin: 64px auto;
  height: 200px;
}

footer {
  margin-left: 20px;

}

footer h5 {
  text-align: left;
}

